--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -34,3 +34,4 @@ hilt-compiler = { module = "com.google.dagger:hilt-android-compiler", version.re
 android-application = { id = "com.android.application", version.ref = "agp" }
 jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "kspVersion" }
+compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
