--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,20 +1,20 @@
 [versions]
-agp = "8.5.2"
-kotlin = "2.0.0"
-coreKtx = "1.13.1"
+agp = "8.7.3"
+kotlin = "2.1.0"
+coreKtx = "1.15.0"
 junit = "4.13.2"
 junitVersion = "1.2.1"
 espressoCore = "3.6.1"
-lifecycleRuntimeKtx = "2.8.5"
-activityCompose = "1.9.2"
-composeBom = "2024.09.00"
-kspVersion = "2.0.0-1.0.23"
+lifecycleRuntimeKtx = "2.8.7"
+activityCompose = "1.9.3"
+composeBom = "2024.12.01"
+kspVersion = "2.1.0-1.0.29"
 hiltVersion = "2.51.1"
-composeNavigation = "2.8.0"
+composeNavigation = "2.8.5"
 serialization = "1.6.3"
-accompanist = "0.24.13-rc"
+accompanist = "0.36.0"
 datastore = "1.1.1"
-lifecycleViewModel = "2.8.5"
+lifecycleViewModel = "2.8.7"
 coil = "2.7.0"
 roomVersion = "2.6.1"
 
