--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,19 +6,20 @@ junit = "4.13.2"
 junitVersion = "1.2.1"
 espressoCore = "3.6.1"
 lifecycleRuntimeKtx = "2.8.7"
-activityCompose = "1.9.3"
-composeBom = "2024.12.01"
-composeNavigation = "2.8.5"
-composeFoundation = "1.7.6"
+activityCompose = "1.10.1"
+composeBom = "2025.02.00"
+composeNavigation = "2.8.8"
+composeFoundation = "1.7.8"
 kspVersion = "2.1.0-1.0.29"
 hiltVersion = "2.51.1"
 serialization = "1.6.3"
 accompanist = "0.36.0"
-datastore = "1.1.1"
+datastore = "1.1.3"
 lifecycleViewModel = "2.8.7"
 coil = "2.7.0"
 roomVersion = "2.6.1"
 media3 = "1.5.1"
+uiToolingAndroid = "1.7.8"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -58,6 +59,7 @@ room-ktx = {module = "androidx.room:room-ktx", version.ref = "roomVersion"}
 media3-exoplayer = { module = "androidx.media3:media3-exoplayer", version.ref = "media3"}
 media3-ui = { module = "androidx.media3:media3-ui", version.ref = "media3"}
 androidx-media3-session = { group = "androidx.media3", name = "media3-session", version.ref = "media3" }
+androidx-ui-tooling-android = { group = "androidx.compose.ui", name = "ui-tooling-android", version.ref = "uiToolingAndroid" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
